# QF_CandleRange_Engine

./: .env.example  Makefile  README.md  pyproject.toml  requirements.txt  temp_test.py
src/: buffer_initializer.py  db_general.py  db_signals.py  engine.py  indicator_gap_fill.py  logger_config.py  main.py  public_moduls.py  public_settings.py  strategy_modules.py
src/orders/: broker_oanda.py  order_executor.py  sl_manager.py
src/pivots/: pivot_finder.py
src/signals/: open_signal_registry.py
