[project]
name = "qf-raep-engine"
version = "0.1.0"
description = "QuantFlow RAEP engine"
requires-python = ">=3.11,<3.12"
dependencies = [
    "aiodns==3.5.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.15",
    "aiosignal==1.4.0",
    "attrs==25.3.0",
    "ccxt==4.5.5",
    "certifi==2025.8.3",
    "cffi==2.0.0",
    "charset-normalizer==3.4.3",
    "cryptography==46.0.1",
    "eventkit==1.0.3",
    "frozenlist==1.7.0",
    "ib-insync==0.9.86",
    "idna==3.10",
    "multidict==6.6.4",
    "nats-py==2.11.0",
    "nest-asyncio==1.6.0",
    "numpy==2.3.3",
    "oandapyV20==0.7.2",
    "propcache==0.3.2",
    "psycopg==3.3.2",
    "psycopg-binary==3.3.2",
    "pycares==4.11.0",
    "pycparser==2.23",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "PyYAML==6.0.2",
    "requests==2.32.5",
    "setuptools==80.9.0",
    "six==1.17.0",
    "tenacity==9.1.2",
    "typing_extensions==4.15.0",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "websockets==15.0.1",
    "yarl==1.20.1",
]

[tool.uv]
package = false

